ThreadCheckerDoNothing: Add default constructor and forbit copies

This makes WebRTC's ThreadCheckerDoNothing more similar to the Chromium
version, and also fixes the build with GCC (and possibly ICC), which does
not implement CWG DR 253 (see
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=89305):

    ../../api/ice_transport_factory.cc: In constructor ‘webrtc::{anonymous}::IceTransportWithTransportChannel::IceTransportWithTransportChannel(std::unique_ptr<cricket::IceTransportInternal>)’:
    ../../api/ice_transport_factory.cc:31:3: error: uninitialized const member in ‘const class rtc::ThreadChecker’ [-fpermissive]
       IceTransportWithTransportChannel(
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ../../api/ice_transport_factory.cc:45:28: note: ‘const rtc::ThreadChecker webrtc::{anonymous}::IceTransportWithTransportChannel::thread_checker_’ should be initialized
       const rtc::ThreadChecker thread_checker_;
                                ^~~~~~~~~~~~~~~

Bug: chromium:819294
Change-Id: I7d2aad13be4e8c35d365fe71cc92244a2814b51a